<resources>
  <string name="____You_re_in_">… You\'re in!</string>
  <string name="_Convention_info_contribution_disclaimer_">Your identity is not shared with the other artists when you contribute information. Please respect that people of all ages can read this information. Any incorrect or offensive information may be removed without notice.

Once submitted, you cannot edit what you wrote, so make sure it’s correct!
</string>
  <string name="_Convention_search_empty_">There are no conventions matching your search.</string>
  <string name="_Email_usage_disclaimer_">Your email is used only for sign-in and verification purposes.
It will never be shared with anyone else.
</string>
  <string name="_Empty_no_con_records_list_message_">This is a place for sales you make outside of a convention.
Looks like you haven\'t sold anything yet though!
</string>
  <string name="_Empty_prices_list_message_">You don\'t have anything for sale yet…
Head over to the products page and get some items set up!
</string>
  <string name="_Empty_products_list_message_">You don\'t have anything for sale yet…
Edit this page and write down what you plan to be selling!
</string>
  <string name="_Empty_records_list_message_">You haven\'t sold anything yet</string>
  <string name="_First_product_type_message_">What kinds of things do you sell\?</string>
  <string name="_Name_usage_disclaimer_">Your name may be visible to other artists.
You can use your artist handle if you like.
</string>
  <string name="_No_convention_user_info_">No one has shared any information about this convention yet…
You could be the first!
</string>
  <string name="_Splash_body_">ConArtist brings together all the things you need, streamlining your convention experience. Find conventions, manage inventory, and record sales, all in one place.</string>
  <string name="_Splash_title_">The money counter for the busy tabler</string>
  <string name="_Suggestion_disclaimer_">Suggestions are to provide feedback about the ConArtist platform. If you want to request a convention to be added, there is a separate link to do this on the Settings page.

Your name may be shared with other artists when you make a suggestion. Please respect that people of all ages can read this information. Any offensive text may be removed without notice.

Once submitted, you cannot edit what you wrote, so make sure it describes what you want in enough detail!
</string>
  <string name="_Support_description_">Feel free to contact support for any reason! This can include requests for conventions to be added, issues with the app you need to discuss personally, or if you have a question about how something works.

If you are just making a general feature request, you can use the \"Make a Suggestion\" feature instead to gather support from other users.
</string>
  <string name="_Verify_Account_Failed_">We couldn\'t verify your account right now. Maybe you should try again\?</string>
  <string name="_Verify_Account_Successful_">Your account is now secured. Welcome to ConArtist.</string>
  <string name="About">About</string>
  <string name="Account">Account</string>
  <string name="Add">Add</string>
  <string name="Address">Address</string>
  <string name="Advanced_Search">Advanced Search</string>
  <string name="All">All</string>
  <string name="Amount">Amount</string>
  <string name="An_unknown_error_has_occurred">An unknown error has occurred</string>
  <string name="And_again">… and again</string>
  <string name="Any">Any</string>
  <string name="Average">Average</string>
  <string name="Back">Back</string>
  <string name="Can_I_get_your_email_">Can I get your email\?</string>
  <string name="Cancel">Cancel</string>
  <string name="Category">Category</string>
  <string name="Change">Change</string>
  <string name="Change_Currency">Change Currency</string>
  <string name="Change_Email">Change Email</string>
  <string name="Change_Language">Change Language</string>
  <string name="Change_Name">Change Name</string>
  <string name="Change_Password">Change Password</string>
  <string name="Chat_on_Discord">Chat on Discord</string>
  <string name="City">City</string>
  <string name="Completed">Completed</string>
  <string name="ConArtist">ConArtist</string>
  <string name="Confirm_new_email">Confirm new email</string>
  <string name="Confirm_new_password">Confirm new password</string>
  <string name="Contact_Support">Contact Support</string>
  <string name="Continue">Continue</string>
  <string name="Contribute">Contribute</string>
  <string name="Conventions">Conventions</string>
  <string name="Country">Country</string>
  <string name="Currency">Currency</string>
  <string name="Currency_changed_successfully">Currency changed successfully</string>
  <string name="Current_earnings">Current earnings</string>
  <string name="Current_password">Current password</string>
  <string name="Customers">Customers</string>
  <string name="Dashboard">Dashboard</string>
  <string name="Dates">Dates</string>
  <string name="Delete">Delete</string>
  <string name="Details">Details</string>
  <string name="Discard">Discard</string>
  <string name="Don_t_forget_to_verify_your_email_">Don\'t forget to verify your email!</string>
  <string name="Donate">Donate</string>
  <string name="Download_on_the_App_Store">Download on the App Store</string>
  <string name="Downvote">Downvote</string>
  <string name="EEE">EEE.</string>
  <string name="EEEE_MMMM_d__yyyy">EEEE MMMM d, yyyy</string>
  <string name="EEEE_MMMM_d__yyyy__h_mma">EEEE MMMM d, yyyy. h:mma</string>
  <string name="Edit">Edit</string>
  <string name="Editing_Expense">Editing Expense</string>
  <string name="Editing_Sale">Editing Sale</string>
  <string name="Email">Email</string>
  <string name="Email____">Email: {light:%1$s}</string>
  <string name="Ensure_the_format_above_matches_your_data">Ensure the format above matches your data</string>
  <string name="Expense_saved">Expense saved</string>
  <string name="Expenses">Expenses</string>
  <string name="Export">Export</string>
  <string name="Export_Products">Export Products</string>
  <string name="Extra_info">Extra info</string>
  <string name="FAQ">FAQ</string>
  <string name="Filter_types">Filter types</string>
  <string name="Find_more">Find more</string>
  <string name="Finish">Finish</string>
  <string name="Forgot_Password">Forgot Password</string>
  <string name="General">General</string>
  <string name="Grouping">Grouping</string>
  <string name="Hours">Hours</string>
  <string name="How_many">How many</string>
  <string name="How_much_do_these_cost_">How much do these cost\?</string>
  <string name="Huh_">Huh\?</string>
  <string name="I_forgot_my_password">I forgot my password</string>
  <string name="I_have_read_and_agree_to_the__Terms_of_Service__and__Privacy_Policy_">I have read and agree to the {Terms of Service} and {Privacy Policy}</string>
  <string name="ID">ID</string>
  <string name="Import">Import</string>
  <string name="Import_Products">Import Products</string>
  <string name="Import_failed__Cannot_change_the_type_of___">Import failed: Cannot change the type of %1$s</string>
  <string name="Import_failed__Could_not_find_product_type_named___">Import failed: Could not find product type named %1$s</string>
  <string name="Import_failed__Could_not_find_product_with_id___">Import failed: Could not find product with id %1$s</string>
  <string name="Import_failed__Failed_to_save_products__Please_try_again_later_">Import failed: Failed to save products. Please try again later!</string>
  <string name="Import_failed__Unknown_error">Import failed: Unknown error</string>
  <string name="Importing_only___">Importing only %1$s</string>
  <string name="Include_IDs">Include IDs</string>
  <string name="Include_IDs_to_modify_exisiting_products__New_products_can_be_left_with_an_empty_ID_">Include IDs to modify exisiting products. New products can be left with an empty ID.</string>
  <string name="Include_titles">Include titles</string>
  <string name="Includes_IDs">Includes IDs</string>
  <string name="Includes_titles">Includes titles</string>
  <string name="Including_IDs_makes_it_much_easier_to_import_your_products_again_later_">Including IDs makes it much easier to import your products again later!</string>
  <string name="Info">Info</string>
  <string name="Inventory">Inventory</string>
  <string name="It_seems_something_went_wrong_">It seems something went wrong.</string>
  <string name="Keep_it_short_and_sweet_">Keep it short and sweet!</string>
  <string name="Language">Language</string>
  <string name="Language___Location">Language &amp; Location</string>
  <string name="Language_changed_successfully">Language changed successfully</string>
  <string name="Let_s_get_started_">Let\'s get started!</string>
  <string name="Load_more">Load more</string>
  <string name="Loading___">Loading…</string>
  <string name="Looks_good_to_me">Looks good to me</string>
  <string name="MMM__d__yyyy">MMM. d, yyyy</string>
  <string name="MMMM_d__yyyy__h_mma">MMMM D yyyy. h:mma</string>
  <string name="Make_a_suggestion">Make a suggestion</string>
  <string name="Manage_Prices">Manage Prices</string>
  <string name="Manage_Products">Manage Products</string>
  <string name="Metric">Metric</string>
  <string name="Mode">Mode</string>
  <string name="Money">Money</string>
  <string name="Name">Name</string>
  <string name="Name_changed_successfully">Name changed successfully</string>
  <string name="Net_profit">Net profit</string>
  <string name="New_Expense">New Expense</string>
  <string name="New_Product">New Product</string>
  <string name="New_Product_Type">New Product Type</string>
  <string name="New_Sale">New Sale</string>
  <string name="New_email">New email</string>
  <string name="New_expense">New expense</string>
  <string name="New_name">New name</string>
  <string name="New_password">New password</string>
  <string name="New_product">New product</string>
  <string name="New_product_type">New product type</string>
  <string name="New_sale">New sale</string>
  <string name="No_activity_for_this_day">No activity for this day</string>
  <string name="No_conventions_today">No conventions today</string>
  <string name="No_conventions_upcoming">No conventions upcoming</string>
  <string name="No_products_yet____add_one_">No products yet… add one!</string>
  <string name="Note">Note</string>
  <string name="Nothing_to_say___">Nothing to say…</string>
  <string name="Now_just_sign_at_the_bottom_">Now just sign at the bottom.</string>
  <string name="Oh_no___">Oh no…</string>
  <string name="Options">Options</string>
  <string name="Other_Sales">Other Sales</string>
  <string name="Password">Password</string>
  <string name="Password_changed_successfully">Password changed successfully</string>
  <string name="Pick_a_password__I_m_not_looking_">Pick a password. I\'m not looking</string>
  <string name="Price">Price</string>
  <string name="Prices">Prices</string>
  <string name="Privacy_Policy">Privacy Policy</string>
  <string name="Product">Product</string>
  <string name="Product_type_is_specified_as_a_column">Product type is specified as a column</string>
  <string name="Product_types_will_be_included_in_each_row">Product types will be included in each row</string>
  <string name="Product_types_will_be_split_into_different_files">Product types will be split into different files</string>
  <string name="Products">Products</string>
  <string name="Products_imported_successfully">Products imported successfully</string>
  <string name="Promise_">Promise.</string>
  <string name="Quantity">Quantity</string>
  <string name="Recommend">Recommend</string>
  <string name="Remaining">Remaining</string>
  <string name="Remove">Remove</string>
  <string name="Sign_in">Sign in</string>
  <string name="Sign_up">Sign up</string>
  <string name="Terms_of_Service">Terms of Service</string>
  <string name="Visit_conartist_app">Visit {action:conartist.app}</string>
</resources>